all roles added

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 									<span class="icon solid style2 major fa-bolt"></span>
 									<h3>Rehan</h3>
 									<p>
-										
+										Greyscale Image Colorization Scripting
 									</p>
 								</section>
 								<section>
@@ -312,7 +312,7 @@
 									<span class="icon solid style2 major fa-desktop"></span>
 									<h3>M.S. Veer Shreyas</h3>
 									<p>
-
+										Video Colorization Scripting.
 									</p>
 								</section>
 							</div>
