new members added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 									<li>Rehan - 19BPS1033</li>
 									<li>Shashank Sridhar - 19BCE1429</li>
 									<li>M.S. Veer Shreyas - 19BCE1569</li>
+									<li>Sai Varun Kanduri - 19BCE1849</li>
+									<li>Amy George - 19BCE1732</li>
 								</ol>
 							</p>
 							<ul class="actions stacked">
@@ -315,10 +317,23 @@
 										Video Colorization Scripting.
 									</p>
 								</section>
+								<section>
+									<span class="icon solid style2 major fa-desktop"></span>
+									<h3>Sai Varun Kanduri</h3>
+									<p>
+										Deep Space Photo colorization
+									</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-desktop"></span>
+									<h3>Amy George</h3>
+									<p>
+										Deep Space Photo colorization
+									</p>
+								</section>
 							</div>
 						</div>
 					</section>
-
 					<!-- Seven -->
 					<section class="wrapper style1">
 						<div class="inner content-align-left align-left">
